# odc-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
odc_python/: __init__.py  odcharts.py
tests/: test_odc_python.py
